# test_darknet_cpp

./: CMakeLists.txt
cmake/modules/: FindDarknet.cmake
src/: WrapperDarknet.cpp  WrapperDarknet.h  classification.cpp
